# immo-ai

./: .env.example  CLAUDE.md  README.md  USE_CASES.md  alembic.ini  docker-compose.yml  justfile  main.py  pyproject.toml
adapters/crawlers/: crawl4ai_adapter.py  httpx_adapter.py  playwright_adapter.py
adapters/embeddings/: local_embedding.py  openai_embedding.py
adapters/llm/: anthropic_adapter.py  ollama_adapter.py  openai_adapter.py
adapters/maps/: google_maps_adapter.py  overpass_adapter.py
alembic/: env.py
apps/api/: dependencies.py  main.py
apps/api/routers/: agent.py  analysis.py  listings.py
core/: __init__.py  config.py  database.py  di_container.py  logging.py  models.py  redis.py  schemas.py
core/ports/: __init__.py  crawler_port.py  embedding_port.py  llm_port.py  map_port.py
docs/: USAGE.md  model.md
infra/: init.sql
services/agent/: agent.py  tools.py
services/crawler/: immoscout_crawler.py  kleinanzeigen_crawler.py
services/intel/: competitors.py  demographics.py  revenue_estimator.py
services/scoring/: base_scorer.py  nail_scorer.py  restaurant_scorer.py  weights.py
workers/: crawl_worker.py  intel_worker.py
