[project]
name = "immo-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "anthropic>=0.83.0",
    "apscheduler>=3.10",
    "arq>=0.27.0",
    "asyncpg>=0.31.0",
    "beautifulsoup4>=4.14.3",
    "crawl4ai>=0.4",
    "fastapi>=0.115",
    "httpx>=0.28.1",
    "langchain>=0.3",
    "langchain-anthropic>=1.3.3",
    "langchain-openai>=1.1.10",
    "openai>=2.21.0",
    "playwright>=1.58.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=5.3.1",
    "sqlalchemy[asyncio]>=2.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]
